<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Is today friday?</string>
    <string name="copyright_title">Copyright</string>
    <string name="app_idea">The app come from an app named Jike APP in China,which has a group [Is today Friday?](You can visit it from the button at bottom-left.)</string>
    <string name="logo_idea">The logo of this app come from a text style of Jike APP, and the picture is generated from a website created by a Jiker.</string>
    <string name="colors">Color</string>
    <string name="main_color">Main color: white(#F8F8F8)/blue(#01A9F4)/yellow(#FFE411)/black(#404040) was get from Jike website.</string>
    <string name="more_color_from">526 kinds of color in [more color] were got from a website named [中国色](the colors of China),you can visit it below.The color values at this website comes from a paper：《色谱》中科院科技情报编委会名词室.科学出版社,1957.</string>
    <string name="fonts">Fonts</string>
    <string name="open_source">Open Source</string>
    <string name="cn_fonts">Chinese fonts：ShuSong、FangSong、KaiTi、HeiTi，are free fonts by FangZheng font library.</string>
    <string name="en_fonts">English fonts: AmaticSC/Courgette/IndieFlower/Kalam/Laila/Molle
    /NovaFlat/PermanentMarker/PlayfairDisplay/Teko/YanoneKaffeesatz(by order), are all free fonts by google fonts website.</string>

    <string name="text_color">Text Color</string>
    <string name="bg_color">Bg Color</string>
    <string name="bubble_color">Bubble Color</string>
    <string name="square">Square</string>
    <string name="full_screen">Full</string>
    <string name="cn">CN</string>
    <string name="en">EN</string>
    <string name="set_wallpaper">Set As Wallpaper</string>
    <string name="share">Share To</string>
    <string name="friday_group">Group Friday</string>
    <string name="save_picture">Save Picture</string>


    <string name="is_today_friday">Is today Friday?</string>
    <string name="yes">YES!</string>
    <string name="no">NO</string>
    <string name="more_color">More Color</string>
    <string name="custom_color">Custom Color</string>
    <string name="bubble">Bubble</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="more_some_color">More %1$s Color</string>
    <string name="custom_some_color">Custom %1$s Color</string>
    <string name="input_color_value">Enter a six-bit or eight-bit color value start with #</string>
    <string name="right_color">Please enter valid color value.</string>
    <string name="jump_notice">Go to target app, you can select qrcode in album to donate.</string>
    <string name="uninstall_notice">You don\'t have %1$s installed on your phone so you can\'t donate, thanks for your support.</string>
    <string name="donate_by_wechat">Donate By Wechat</string>
    <string name="donate_by_ali">Donate By Alipay</string>
    <string name="save_qrcode">Long click qrcode to save in album.</string>
    <string name="request_permission">The app need storage permission to read and save pictures.</string>
    <string name="license_image_picker">com.github.nguyenhoanglam:ImagePicker\n
        License  Copyright 2016 Nguyen Hoang Lam\n
        Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at   http://www.apache.org/licenses/LICENSE-2.0    Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
</resources>