<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.free.duangjike.friday.DonateActivity"
    android:background="@color/jikeWhite">

    <ImageView
        android:id="@+id/iv_about_me"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_donation_wechat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_donation_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_by_wechat"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/jikeBlue"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_about_me"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_donation_alipay"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
        android:id="@+id/tv_donation_alipay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/donate_by_ali"
        android:background="@color/jikeBlue"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_about_me"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toEndOf="@id/tv_donation_wechat"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_qrcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
